# PAROL6-Python-API-Gemini-Vision-Public

./: .env.example  .gitignore  01_PAROL6完整功能测试教程.ipynb  06待轮换清单.md  22_vlm_robot_test.py  23_vlm_full_test.py  25_vlm_mujoco_control.py  26_vlm_mujoco_grasp.py  PAROL6项目架构图.drawio  README.md  README_en.md  pyproject.toml  test_grasp_headless.py  test_grasp_headless_v2.py  test_grasp_standalone.py  test_mujoco_grasp.py  vlm_config.example.json  vlm_config.json  代码审查报告.md  分步测试教程.md  当前状态.md  架构图设计说明.md  测试结果和修复建议.md  运行核验报告.md  项目架构图.mmd
Headless/: headless_commander.py
Headless/Gemini/: gemini.py
